syntax = "proto3";

option java_multiple_files = true;
option java_package = "me.whale.components.common";
option java_outer_classname = "HttpProto";

package common;

message HttpReply{
  bool success = 1;
  int32 code = 2;
  optional string message = 3;
}