syntax = "proto3";

import "http.proto";

option java_multiple_files = true;
option java_package = "me.whale.components.service.system";
option java_outer_classname = "UserProto";

package system;

service UserApi{
  rpc add (UserRequest) returns (UserReply){}
  rpc authenticate (AuthRequest) returns (AuthReply){}
}

message UserRequest{
  string userNo = 1;
  string userName = 2;
  string gender = 3;
  string birthday = 4;
  string password = 5;
}

message UserReply{
  common.HttpReply result = 1;
}

message AuthRequest{
  string identityType = 1;
  string identity = 2;
  string authCode = 3;
}

message AuthReply{
  common.HttpReply result = 1;
  string token = 2;
}